# rust_playground

./: .gitignore  Cargo.toml  README.md  main.rs
.cargo/: config.toml
ImageMagick/: Cargo.toml
ImageMagick/src/bindings/: mod.rs
TCP/: Cargo.toml
aps_server/: Cargo.toml
aps_server/src/: main.rs
async_await_investigation/: Cargo.toml
async_await_investigation/src/: main.rs  pinned.rs  sample_1.rs  sample_2.rs
async_streams/: Cargo.toml
async_streams/src/: main.rs
asyncs/: Cargo.toml
asyncs/src/: main.rs
asyncs/src/http_server_simple/: mod.rs
asyncs/src/timer_future/: mod.rs
benches/: Cargo.toml
benches/src/: main.rs
bit_operations/: Cargo.toml
book_async/: Cargo.toml
book_async/src/: main.rs
custom_block_on/: Cargo.toml
custom_block_on/src/: main.rs
custom_executor/: Cargo.toml
custom_executor/src/: main.rs
experiments/: Cargo.toml
experiments/src/: main.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
green_threads/: Cargo.toml
green_threads/src/: main.rs
gtk_fun/: Cargo.toml
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
http_actix_server/: Cargo.toml
http_actix_server/src/: main.rs
http_server/: Cargo.toml
http_server/src/: main.rs
http_thread_pool/: Cargo.toml
http_thread_pool/src/: lib.rs  main.rs
hyper-microservice/: Cargo.toml
hyper-microservice/src/: main.rs
image_ffi_php/: Cargo.toml
image_ffi_php/src/: lib.rs  main.rs
iron-gcd/: Cargo.toml
iron-gcd/src/: main.rs
job_queue/: Cargo.toml
making_own_executable_packer/: Cargo.toml
making_own_executable_packer/asm/: hello.asm
making_own_executable_packer/delf/: Cargo.toml
making_own_executable_packer/delf/src/: lib.rs  parse.rs
making_own_executable_packer/elk/: Cargo.toml
making_own_executable_packer/elk/src/: main.rs
making_own_executable_packer/src/: lib.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
mastering_rust/: Cargo.toml
mastering_rust/src/: chapter1.rs  interior_mutability.rs  main  main.rs  mutex.rs  strings.rs  threading.rs  tokio.rs
other/: Cargo.toml
other/src/: main.rs
p_kernel/: Cargo.toml
p_kernel/src/: main.rs
parsemath/: Cargo.toml
parsemath/src/parsemath/: mod.rs  parser.rs  token.rs  tokenizer.rs
php-ext-test/: Cargo.toml  composer.json
php-ext-test/examples/: Cargo.toml
php-ext-test/examples/src/: lib.rs
php-ext-test/scripts/: run-tests.sh
php-ext-test/src/: fmt.rs  info.rs  lib.rs  macros.rs
php-ext-test/src/zend/: module.rs  types.rs
php-ext-test/tests/: hello.php
pin-and-suffering/: Cargo.toml
pin-and-suffering/src/: main.rs
pingcap/kvs/: Cargo.toml
pingcap/kvs/src/: command.rs  errors.rs  kv.rs  lib.rs
pingcap/kvs/tests/: tests.rs
pingpcap/network/project-1/: Cargo.toml
pingpcap/network/project-1/src/: lib.rs
playground/: Cargo.toml
playground/src/: main.rs  svg_sample.rs
programming_rust_2/: Cargo.toml
programming_rust_2/src/: main.rs  trait_impl.rs
projects/smartcms_kvstore_guest/: guest.js
projects/smartcms_test_host/: Cargo.toml  smart_cms.wit
projects/smartcms_test_host/src/: main.rs
projects/wasm/: Cargo.toml
projects/wasm/hello_world_component/: greet.wit
projects/wasm/src/: lib.rs
projects/zero_to_prod/: Cargo.toml
projects/zero_to_prod/src/: main.rs
rust_1/: Cargo.toml
rust_1/src/: main.rs
rust_in_action/: Cargo.toml
rust_in_action/src/: arrays.rs  generics.rs  grep_lite_v1.rs  lang_foundations.rs  main.rs
rust_wasm_adventures/: Cargo.toml
rust_wasm_adventures/www/: index.js  package-lock.json  package.json
rustlings/: course-remote-info.yaml
rustlings/Common Collections/String Test/Strings and strs/: task-info.yaml
rustlings/Common Collections/Strings/Intro/: task-info.yaml
rustlings/Common Collections/Strings/Returning a String/: task-info.yaml
rustlings/Common Collections/Strings/String Slice/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Arrays/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Boolean/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Characters/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Compound Types/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Scalar Types/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Slices/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Tuple Index/: task-info.yaml
rustlings/Common Programming Concepts/Data Types/Tuples/: task-info.yaml
rustlings/Common Programming Concepts/Functions/Defining a Function/: task-info.yaml
rustlings/Common Programming Concepts/Functions/Intro/: task-info.yaml
rustlings/Common Programming Concepts/Functions/Passing an Argument/: task-info.yaml
rustlings/Common Programming Concepts/Functions/Return Type/: task-info.yaml
serde_test/: Cargo.toml  move.json
serde_test/src/: main.rs
sjlj/: Cargo.toml
sjlj/src/: main.rs
ssh_connect/: Cargo.toml
ssh_connect/src/: main.rs
syscalls/: Cargo.toml
syscalls/src/: main.rs
test_rpc/: Cargo.toml  myschema.fbs
test_rpc/src/: main.rs  sample.fbs
the_rust_book/: Cargo.toml
the_rust_book/src/: main.rs
tokio_learn/: Cargo.toml  foo.txt
tokio_learn/examples/: async_in_depth.rs  echo_client.rs  framing.rs  hello-redis.rs  io.rs  mini_tokio.rs
tokio_learn/src/: main.rs  sample.rs
unstable/: Cargo.toml
unstable/src/: main.rs
use_ffi/: Cargo.toml
use_ffi/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
walker_rust/: Cargo.toml
walker_rust/src/: main.rs
wasi_nn_example/: Cargo.toml
wasi_nn_example/src/: main.rs
wasi_nn_example/wit/: wasi-nn.wit
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.html  index.js  package-lock.json  package.json
x11/: Cargo.toml
x11/src/: main.rs
zero_to_prod/: Cargo.toml
zero_to_prod/scripts/: init_db.sh
zero_to_prod/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero_to_prod/src/routes/: health_check.rs  subscriptions.rs
zero_to_prod/tests/: health_check.rs
(+98 files in other folders)
