[package]
name = "async_streams"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski.valery@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
