[package]
name = "custom_executor"
version = "0.1.0"
authors = ["valery"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
async-task = "1.3.1"
once_cell = "1.3.1"
futures = "0.3.4"
num_cpus = "1.12.0"
