[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.33"
futures = "0.1.28"
slab = "0.4.2"
lazy_static = "1.3.0"
regex = "1.2.1"