[package]
name = "image_ffi_php"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false
codegen-units = 1
rustflags = ["-C target-cpu=native"]