[package]
name = "ssh_connect"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ssh = "0.1.2"
futures = "0.1"
thrussh = "0.19"
tokio-core = "0.1"
tokio-io = "0.1"
thrussh-keys = "0.9"