[package]
name = "kvs"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
clap = "3.0.0-beta.2"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = "1.0.117"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
clap = "3.0.0-beta.2"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = "1.0.117"